[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 31.9128 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Node" type="Node"]

[node name="colide2" type="StaticBody2D" parent="."]
position = Vector2( 837, 294 )
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="colide2"]
modulate = Color( 0.564706, 0.145098, 0.145098, 1 )
scale = Vector2( 5.73438, 5.73438 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colide2"]
position = Vector2( 0.500001, -1.78814e-06 )
scale = Vector2( 5.73438, 5.73438 )
shape = SubResource( 2 )

[node name="colide" type="StaticBody2D" parent="."]
position = Vector2( 185, 294 )
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="colide"]
modulate = Color( 0.564706, 0.145098, 0.145098, 1 )
scale = Vector2( 5.73438, 5.73438 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colide"]
position = Vector2( 0.500001, -1.78814e-06 )
scale = Vector2( 5.73438, 5.73438 )
shape = SubResource( 2 )

[node name="colide3" type="StaticBody2D" parent="."]
position = Vector2( 516, -73 )
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="colide3"]
modulate = Color( 0.564706, 0.145098, 0.145098, 1 )
scale = Vector2( 5.73438, 5.73438 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colide3"]
position = Vector2( 0.500001, -1.78814e-06 )
scale = Vector2( 5.73438, 5.73438 )
shape = SubResource( 2 )

[node name="colide4" type="StaticBody2D" parent="."]
position = Vector2( 513, 660 )
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="Sprite" parent="colide4"]
modulate = Color( 0.564706, 0.145098, 0.145098, 1 )
scale = Vector2( 5.73438, 5.73438 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colide4"]
position = Vector2( 0.500001, -1.78814e-06 )
scale = Vector2( 5.73438, 5.73438 )
shape = SubResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 572, 168 )
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 10.0

[node name="CenterContainer" type="CenterContainer" parent="KinematicBody2D/Camera2D"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = 90.0
margin_right = 57.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="KinematicBody2D/Camera2D/CenterContainer"]
margin_left = -191.0
margin_top = -1.0
margin_right = 319.0
margin_bottom = 49.0
text = "Press A, B or C
to add those items
to your inventory"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="KinematicBody2D/Camera2D"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 131.0
margin_top = -142.0
margin_right = 274.0
margin_bottom = -92.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="KinematicBody2D/Camera2D/HBoxContainer"]
margin_left = 69.0
margin_right = 69.0
margin_bottom = 50.0

[node name="ItemA" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer2"]
visible = false
margin_right = 44.0
margin_bottom = 14.0
text = "ITEM A"

[node name="ItemB" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer2"]
visible = false
margin_right = 44.0
margin_bottom = 14.0
text = "ITEM B"

[node name="ItemC" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer2"]
visible = false
margin_right = 43.0
margin_bottom = 14.0
text = "ITEM C"

[node name="VBoxContainer" type="VBoxContainer" parent="KinematicBody2D/Camera2D/HBoxContainer"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 50.0

[node name="QuantA" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="QuantB" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="QuantC" type="Label" parent="KinematicBody2D/Camera2D/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 8.0
margin_bottom = 14.0
text = "0"
